# webserv777

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  index.html
configuration/: baseconf.conf  server.conf  webserv.conf
configuration/config/: Configuration.cpp
docker-nginx/: docker-compose.yml  nginx.conf
docker-nginx/data/error/: 404.html
docker-nginx/data/www/: index.html
includes/: Read.hpp  Reading.hpp  networking.hpp  webserv.h  webserv.hpp
includes/ConfigParcer/: ConfigParcer.hpp  Location.hpp
includes/MultPlexing/: MultPlexing.hpp
includes/Server/: Server.hpp  ServerTemplate.hpp
includes/Sockets/: BindingSocket.hpp  Connecting.hpp  ListeningSocket.hpp  Socket.hpp  hdelibc-sockets.hpp
includes/cgi/: Environment.h  Environment.hpp  Exec.h  Exec.hpp  ExecPython.h  ExecPython.hpp  cgi.hpp
includes/config/: AutoIndexOption.h  AutoIndexOption.hpp  Configuration.h  Location.h  Location.hpp  Server.h  Server.hpp
includes/domain/: ErrorState.h  ErrorState.hpp  Event.h  Event.hpp  EventHandler.h  EventHandler.hpp  EventStateHelper.h  File.h  Request.h  Request.hpp  Response.h  Response.hpp
includes/http/: Http.hpp  HttpRequest.hpp  HttpResponse.hpp
includes/io/: File.h  File.hpp  Multiplexer.h  Multiplexer.hpp  Read.h  Read.hpp  Write.h  Write.hpp
includes/model/: AutoIndex.h  AutoIndex.hpp  Headers.h  Headers.hpp  MimeTypes.h  MimeTypes.hpp  Pages.h  Pages.hpp  RequestData.h  RequestData.hpp
includes/network/: Location.h  Network.h  Server.h  ServerBuilder.h  Socket.h  Socket.hpp
includes/parser/: AutoIndex.hpp  Autoindex.hpp  ConfigParser.h  ConfigParser.hpp  HttpError.hpp  HttpRequestParser.h  HttpResponseParser.h  LocationParser.h  LocationParser.hpp  RequestInfo.h  RequestParser.h  RequestParser.hpp  ResponseInfo.h
includes/utils/: Logger.h  Logger.hpp
parser/parser/: HttpRequestParser.h  UrlParser.h
public/cgi/: hello.py  test.bash
public/directory-page/: index.html
public/directory-page/alternative/: index.html
public/directory-page/src/: style.css
public/error-pages/: 400.html  404.html  405.html  413.html  500.html
public/error-pages/500/src/: index.html
public/images/test/: test.txt
public/puppy-care/assets/js/: jquery-3.3.1.min.js
public/test-pages/: cgi-page.html  upload-page.html
public/upload-page/: customers.csv  upload-page.html
public/uploaded-files/alternative/: customers.csv  test_file.txt
public/website/assets/js/: bootstrap.min.js
public_test_simple_html/: index.html
resources/: mime.types
srcs/: Read.cpp  Reading.cpp  hello.py  main.cpp  webserv.cpp
srcs/MultPlexing/: MultPlexing.cpp
srcs/Server/: Server.cpp  ServerTemplate.cpp
srcs/Sockets/: BindingSocket.cpp  Connecting.cpp  ListeningSocket.cpp  Socket.cpp
srcs/cgi/: Environment.cpp  Exec.cpp  ExecPython.cpp  cgi.cpp
srcs/config/: AutoIndexOption.cpp  Location.cpp  Server.cpp
srcs/domain/: ErrorState.cpp  Event.cpp  EventHandler.cpp  EventStateHelper.cpp  File.cpp  Request.cpp  Response.cpp
srcs/http/: Http.cpp  HttpRequest.cpp  HttpResponse.cpp
srcs/io/: File.cpp  Multiplexer.cpp  Read.cpp  Write.cpp
srcs/model/: AutoIndex.cpp  Headers.cpp  MimeTypes.cpp  Pages.cpp  RequestData.cpp
srcs/network/: Location.cpp  Network.cpp  Server.cpp  ServerBuilder.cpp  Socket.cpp
srcs/parser/: Autoindex.cpp  ConfigParcer.cpp  ConfigParser.cpp  HttpError.cpp  HttpRequestParser.cpp  HttpResponseParser.cpp  Location.cpp  LocationParser.cpp  RequestInfo.cpp  RequestParser.cpp  ResponseInfo.cpp  UrlParser.cpp
srcs/tests/: webserv-test.postman_collection.json
srcs/utils/: Logger.cpp
static/: 404.html
test/: client.cpp
tests/: webserv-test.postman_collection.json
